test/spec/global.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/global.wast
(;; STDOUT ;;;
out/test/spec/global.wast:231: assert_trap passed: undefined table index
out/test/spec/global.wast:253: assert_invalid passed:
  error: can't global.set on immutable global at index 0.
  0000029: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:258: assert_invalid passed:
  error: can't global.set on immutable global at index 0.
  0000035: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:267: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/global.wast:272: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x20
out/test/spec/global.wast:277: assert_invalid passed:
  0000013: error: expected END opcode after initializer expression
out/test/spec/global.wast:282: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/global.wast:287: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/global.wast:292: assert_invalid passed:
  000000e: error: unexpected opcode in initializer expression: 0x1
out/test/spec/global.wast:297: assert_invalid passed:
  error: type mismatch at global initializer expression. got f32, expected i32
  0000013: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:302: assert_invalid passed:
  0000010: error: expected END opcode after initializer expression
out/test/spec/global.wast:307: assert_invalid passed:
  error: invalid global initializer expression, must be a constant expression
  000000e: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:312: assert_invalid passed:
  0000026: error: expected END opcode after initializer expression
out/test/spec/global.wast:317: assert_invalid passed:
  0000026: error: expected END opcode after initializer expression
out/test/spec/global.wast:322: assert_invalid passed:
  0000000: error: initializer expression can only reference an imported global
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:327: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000010: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:332: assert_invalid passed:
  0000000: error: global variable out of range: 2 (max 2)
  0000026: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:337: assert_invalid passed:
  error: initializer expression cannot reference a mutable global
  000002a: error: EndGlobalInitExpr callback failed
out/test/spec/global.wast:345: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/global.wast:358: assert_malformed passed:
  0000026: error: global mutability must be 0 or 1
out/test/spec/global.wast:375: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/global.wast:387: assert_malformed passed:
  0000011: error: global mutability must be 0 or 1
out/test/spec/global.wast:401: assert_invalid passed:
  0000000: error: global variable out of range: 0 (max 0)
  000001a: error: OnGlobalGetExpr callback failed
out/test/spec/global.wast:406: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000022: error: OnGlobalGetExpr callback failed
out/test/spec/global.wast:414: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000034: error: OnGlobalGetExpr callback failed
out/test/spec/global.wast:422: assert_invalid passed:
  0000000: error: global variable out of range: 2 (max 2)
  000003c: error: OnGlobalGetExpr callback failed
out/test/spec/global.wast:432: assert_invalid passed:
  0000000: error: global variable out of range: 0 (max 0)
  000001b: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:437: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000023: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:445: assert_invalid passed:
  0000000: error: global variable out of range: 1 (max 1)
  0000035: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:453: assert_invalid passed:
  0000000: error: global variable out of range: 2 (max 2)
  000003d: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:463: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:472: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:482: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:492: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:502: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000002a: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:512: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:522: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:532: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000025: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:542: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:551: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000021: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:560: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  0000027: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:570: assert_invalid passed:
  error: type mismatch in global.set, expected [i32] but got []
  000003e: error: OnGlobalSetExpr callback failed
out/test/spec/global.wast:588: assert_malformed passed:
  out/test/spec/global/global.46.wat:1:33: error: redefinition of global "$foo"
  (global $foo i32 (i32.const 0))(global $foo i32 (i32.const 0))
                                  ^^^^^^
out/test/spec/global.wast:592: assert_malformed passed:
  out/test/spec/global/global.47.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(global $foo i32 (i32.const 0))
                                   ^^^^^^
out/test/spec/global.wast:596: assert_malformed passed:
  out/test/spec/global/global.48.wat:1:34: error: redefinition of global "$foo"
  (import "" "" (global $foo i32))(import "" "" (global $foo i32))
                                   ^^^^^^
92/92 tests passed.
;;; STDOUT ;;)
